add shopping cart

--- a/public/index.html
+++ b/public/index.html
@@ -12,4 +12,5 @@
   <body>
     <div id="root"></div>
   </body>
+  <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
 </html>
